--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.4.1",
